--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,8 @@
         <div class="footer_content_container">
 
             <div class="name_container">
-                <span><a href="#">Cristina Jordi</a></span>
+                <div><span><a href="#">Cristina Jordi</a></span></div>
+                <div class="imprint-laptop-version"><a href="#">Imprint</a></div>
             </div>
 
             <div class="copyright_container">
@@ -16,10 +17,7 @@
                 <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
             </div>
 
-            <div class="imprint">
-                <a href="#">Imprint</a>
-
-            </div>
+            <div class="imprint"><a href="#">Imprint</a></div>
 
         </div>
     </div>
