Portfolio with Mobile Versions

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
 
             <div class="name_container">
                 <div><span><a href="#">Cristina Jordi</a></span></div>
-                <div class="imprint-laptop-version"><a href="#">Imprint</a></div>
+                <div class="imprint-laptop-version"><a routerLink="/imprint">Imprint</a></div>
             </div>
 
             <div class="copyright_container">
@@ -12,13 +12,15 @@
             </div>
 
             <div class="social_media_container">
-                <img class="transition" src="../../assets/img/references Icons_line/Github button.png">
-                <img class="transition" src="../../assets/img/references Icons_line/Email button.png">
-                <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
+                <a href="https://github.com/Cristina-Jordi" target="_blank"><img class="transition"
+                        src="../../assets/img/references Icons_line/Github button.png"></a>
+                <a href="mailto:cristina.jordi@bluewin.ch"><img class="transition"
+                        src="../../assets/img/references Icons_line/Email button.png"></a>
+                <a href="https://www.linkedin.com/in/cristina-jordi-16bb9562" target="_blank"><img class="transition"
+                        src="../../assets/img/references Icons_line/Linkedin button.png"></a>
             </div>
 
-            <div class="imprint"><a href="#">Imprint</a></div>
-
+            <div class="imprint"><a routerLink="/imprint">Imprint</a></div>
         </div>
     </div>
 </section>
