--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,7 @@
             <a href="#about-me">About Me <span>|</span></a>
             <a href="#my-skills">My Skills <span>|</span></a>
             <a href="#portfolio">Portfolio <span>|</span></a>
+            <!-- <a href="#contact">Contact <span>|</span></a> -->
 
         </div>
     </div>
@@ -21,20 +22,21 @@
         <label for="toogle-menu" class="toogle-open"><span></span></label>
 
         <nav>
-            <div>
-                <a href="#"> <i class="fab fa-css3-alt"></i>offcanvas </a>
-                <label for="toogle-menu" class="toogle-close">
+            <div class="name-container">
+                <!-- <a href="#"> <i class="fab fa-css3-alt"></i>offcanvas </a> -->
+                <span>Cristina Jordi</span>
+                <label for="toogle-menu" class="toogle-close" #fixed>
                     <span></span>
                 </label>
             </div>
             <ul>
-                <li><a href="#section1">Section </a></li>
-                <li><a href="#section2">Section </a></li>
-                <li><a href="#section3">Section </a></li>
-                <li><a href="#section4">Section </a></li>
-                <li><a href="#section5">Section </a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#my-skills">My Skills </a></li>
+                <li><a href="#portfolio">Portfolio </a></li>
+                <li><a href="#contact">Contact </a></li>
             </ul>
         </nav>
     </div>
-    <!-- End Mobile Navigation -->
+     <!-- End Mobile Navigation -->
+
 </section>
