--- a/src/app/iam/iam.component.html
+++ b/src/app/iam/iam.component.html
@@ -11,7 +11,7 @@
                     <div class="right-space"><span class="iam-text">I am</span></div>
                     <div><span class="name-text">Cristina Jordi</span></div>
                     <div><span class="FD-text">FRONTEND DEVELOPER</span></div>
-                    <button class="btn-lets-talk">Let's Talk!</button>
+                    <button class="btn-lets-talk"><a href="#contact">Let's Talk!</a></button>
                 </div>
 
             </div>
@@ -22,15 +22,18 @@
         <div>
             <div class="social-media-container">
                 <img class="line-social-media" src="../../assets/img/references Icons_line/Vector 1_red.png">
-                <img class="transition" src="../../assets/img/references Icons_line/Github button.png">
-                <img class="transition" src="../../assets/img/references Icons_line/Email button.png">
-                <img class="transition" src="../../assets/img/references Icons_line/Linkedin button.png">
+                <a href="https://github.com/Cristina-Jordi" target="_blank"><img class="transition"
+                        src="../../assets/img/references Icons_line/Github button.png"></a>
+                <a href="mailto:cristina.jordi@bluewin.ch"><img class="transition"
+                        src="../../assets/img/references Icons_line/Email button.png"></a>
+                <a href="https://www.linkedin.com/in/cristina-jordi-16bb9562/" target="_blank"><img class="transition"
+                        src="../../assets/img/references Icons_line/Linkedin button.png"></a>
                 <a href="mailto:cristina.jordi@bluewin.ch" class="email"><span
                         class="mail-name">cristina.jordi@bluewin.ch</span></a>
             </div>
         </div>
         <div class="scroll-down-container">
-           <div class="text-scroll-down"><span class="scroll-down">Scroll down </span></div>
+            <div class="text-scroll-down"><span class="scroll-down">Scroll down </span></div>
             <div class="scroll-icon"><img src="../../assets/img/references Icons_line/arrow-down-line.png"></div>
         </div>
     </div>
