--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,15 +1,15 @@
 <div class="imprint-container">
-<h3>Imprint</h3>
-<h4>Owner of the Webpage</h4>
+<h2>Imprint</h2>
+<h3>Owner of the Webpage</h3>
 <p>Cristina Jordi<br>
 Chemin des Mouettes 14<br>
 1786 Sugiez<br>
-Switzerland</p><br>
-<h4>Represented by</h4>
-<p>Cristina Jordi</p><br>
-<h4>Contact</h4><br>
-<p>Phone: +41 (0)79 668 66 06</p><br>
-<div class="imprint"><p>E-Mail: <a href="mailto:cristina.jordi@bluewin.ch">cristina.jordi@bluewin.ch</a></p></div><br>
-<h4>Copyright</h4>
+Switzerland</p>
+<h3>Represented by</h3>
+<p>Cristina Jordi</p>
+<h3>Contact</h3>
+<p>Phone: +41 (0)79 668 66 06
+<span class="imprint"><p>E-Mail: <a href="mailto:cristina.jordi@bluewin.ch">cristina.jordi@bluewin.ch</a></p></span>
+<h3>Copyright</h3>
 <p>The copyright for all contents of this website is owned by Cristina Jordi.</p>
 </div>
