--- a/src/app/myskills/my-skills.component.html
+++ b/src/app/myskills/my-skills.component.html
@@ -21,7 +21,8 @@
                 <p>I have grown my frontend developments skills that have allowed me to create different real
                     projects.
                 </p>
-                <div class="button-center"> <button class="another-btn">Get in Touch!</button></div>
+                <div class="button-center"> <a href="#contact"><button class="another-btn">Get in Touch!</button></a>
+                </div>
 
                 <div class="vektor-container-my-skills">
                     <div><img class="vektor-my-skills" src="../../assets/img/my_skills/vector_1_red.png"></div>
