--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
-<div class="full-height">
-    <app-header></app-header>
-    <app-iam></app-iam>
-</div>
+<app-header></app-header>
+<ng-container *ngIf="router.url !== '/imprint'">
+    <div class="full-height">
+        <app-iam></app-iam>
+    </div>
+    <app-about-me></app-about-me>
+    <app-my-skills></app-my-skills>
+    <app-portfolio></app-portfolio>
+    <app-contact></app-contact>
+</ng-container>
 
-<app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
-<app-portfolio></app-portfolio>
-
-<app-contact></app-contact>
+<ng-container *ngIf="router.url === '/imprint'">
+        <app-imprint></app-imprint>
+</ng-container>
 <app-footer></app-footer>
-<!-- <app-imprint></app-imprint> -->
