--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
-<section contact>
-    <div class="contact_container">
+<section contact >
+    <div class="contact_container" id="contact">
 
-        <div class="title_contact">
+        <div class="title_contact" >
             <h2>Contact</h2>
 
             <div class="vektor-container-contact">
@@ -40,7 +40,9 @@
             <img src="../assets/img/to-top.png" alt="To top">
         </button>
 
-        <div class="background-red-container"></div>
+        <div class="background-red-container">
+            <div><img src="../../assets/img/contact/red_3_footer.png"></div>
+        </div>
     </div>
 
 </section>
