--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,19 +2,17 @@ $orange: #FA7902;
 $red: #FF4747;
 $green: #50b650;
 
-
 // Contact form - formatting
 
 .contact_container {
     position: relative;
     display: flex;
-    padding-left: 14%;
+    padding-left: 10%;
     flex-direction: column;
-    margin-top: 100px;
+    margin-bottom: 173px;
 
     .title_contact {
-        height: 200px;
-        // border: 1px solid white;
+        height: 160px;
 
         h2 {
             font-family: 'Poppins', sans-serif;
@@ -22,31 +20,31 @@ $green: #50b650;
             font-weight: 700;
             font-size: max(20px, 6.3vw); // ca. 90px
             line-height: 6vw;
-            margin-bottom: 2vw;
+
+            height: 150px;
+            display: flex;
+            align-items: flex-end;
         }
 
         .vektor-container-contact {
             position: absolute;
             left: 0;
-            top: 8%;
+            top: 18%;
             z-index: 0;
 
             img {
                 height: 4px;
-                width: 6vw; //ca. 70px
+                width: 8vw; //ca. 70px
             }
         }
     }
 
     .contact_content_container {
         display: flex;
-        height: 200px;
-        // border: 1px solid white;
+        margin-top: 49px;
     }
 
     .text_contact {
-        width: 35%;
-        // border: 1px solid white;
 
         h3 {
             line-height: 26px;
@@ -63,9 +61,10 @@ $green: #50b650;
             font-family: 'Poppins', sans-serif;
             color: white;
             font-weight: 400;
-            line-height: 20px;
-            font-size: max(12px, 1vw); // ca. 16px
+            line-height: 19px;
+            font-size: max(12px, 1.1vw); // ca. 16px
             margin-bottom: 2vw;
+            text-align: justify;
         }
 
         .fade-in-out {
@@ -87,7 +86,10 @@ $green: #50b650;
     }
 
     .form_contact {
-        padding-left: 150px;
+        padding-left: 7vw;
+        margin-right: 10%;
+        display: flex;
+        justify-content: flex-end;
 
         .btn_container {
             display: flex;
@@ -102,7 +104,7 @@ $green: #50b650;
         }
 
         input {
-            width: 517px;
+            width: 37vw; // 517px
             height: 20px;
             border-radius: 10px;
             border: 1px solid $red;
@@ -115,8 +117,8 @@ $green: #50b650;
         }
 
         textarea {
-            width: 517px;
-            height: 202px;
+            width: 37vw; // 517px
+            height: 120px;
             border-radius: 10px;
             border: 1px solid $red;
             padding: 15px 15px 15px 15px;
@@ -133,22 +135,20 @@ $green: #50b650;
             font-weight: 400;
             font-size: 16px;
         }
-
-
-
     }
-
 }
 
 .background-red-container {
     position: absolute;
+    top: 31vw;
     left: 0;
-    top: 107%;
-    background-image: url(../../assets/img/contact/red_3_footer.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 558px;
-    height: 616px;
+    opacity: 0.8;
+    z-index: -1;
+
+    img {
+        width: 32vw;
+        height: 60vh;
+    }
 }
 
 input:-webkit-autofill,
@@ -179,9 +179,9 @@ select:-webkit-autofill:focus {
 .top-btn {
     // position: fixed;
     position: absolute;
-    bottom: -103%;
+    bottom: -22%;
     right: 4%;
-    z-index: 9999;
+    z-index: 90;
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -221,19 +221,21 @@ select:-webkit-autofill:focus {
 
         .form_contact {
             padding-left: 0;
+            display: flex;
+            justify-content: flex-start;
         }
     }
 
     .contact_container {
-        padding-left: 4%;
 
         .text_contact {
-            width: 100%;
+            margin-top: 50px;
 
             .text {
                 line-height: 21px;
                 font-size: max(12px, 1.7vw);
                 margin-bottom: -30px;
+                width: 90%;
             }
 
         }
@@ -243,10 +245,10 @@ select:-webkit-autofill:focus {
             margin-top: 8vh;
 
             .vektor-container-contact {
-                top: 21%;
+                top: 20.5%;
 
                 img {
-                    width: 2.2vw; // ca. 20px
+                    width: 8vw; // ca. 20px
                 }
             }
         }
@@ -255,13 +257,13 @@ select:-webkit-autofill:focus {
 
             input,
             textarea {
-                width: 90%;
+                width: 75vw;
             }
         }
     }
 
     .top-btn {
-        bottom: -179%;
+        bottom: -15%;
 
         img {
             height: 19px;
@@ -270,13 +272,304 @@ select:-webkit-autofill:focus {
 
     .background-red-container {
         z-index: -1;
-        top: 830px;
-        width: 239px;
-        height: 236px;
+        top: 71vw; // 557px;
+        width: 45vw; // 434px;
+        height: 63vh; // 550px;
         position: absolute;
         left: 0;
         right: 0;
         bottom: 0;
-        max-width: 100%;
+    }
+}
+
+@media (max-width: 850px) {
+
+    .contact_container {
+
+        .contact_content_container {
+            margin-bottom: -80%;
+        }
+
+        .background-red-container {
+            z-index: -1;
+            top: 24vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+        }
+    }
+
+    .top-btn {
+        position: relative;
+        left: 45vw;
+    }
+
+}
+
+@media (max-width: 770px) {
+    .contact_container {
+        .background-red-container {
+            z-index: -1;
+            top: 45vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+    }
+}
+
+@media (max-width: 740px) {
+    .contact_container {
+        .background-red-container {
+            z-index: -1;
+            top: 60vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+    }
+}
+
+@media (max-width: 720px) {
+    .contact_container {
+        .background-red-container {
+            z-index: -1;
+            top: 48vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+    }
+}
+
+@media (min-width: 615px) and (max-width: 717px) {
+    .contact_container {
+        .background-red-container {
+            z-index: -1;
+            top: 65vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+    }
+}
+
+@media (max-width: 615px) {
+
+    .contact_container {
+        .background-red-container {
+            z-index: -1;
+            top: 65vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+    }
+}
+
+@media (max-width: 590px) {
+    .contact_container {
+        margin-bottom: 12px;
+
+        .title_contact {
+            .vektor-container-contact {
+                top: 17%;
+                font-size: max(12px, 2.5vw);
+            }
+        }
+
+        .text_contact {
+            .text {
+                line-height: 21px;
+                font-size: max(12px, 2.5vw);
+            }
+        }
+
+        .background-red-container {
+            z-index: -1;
+            top: 39vw;
+            position: relative;
+            margin-left: -15%;
+            background-size: 500px;
+            width: 100%;
+
+            img {
+                width: 32vw;
+                height: 41vh;
+            }
+        }
+
+        .top-btn {
+            position: relative;
+            top: 468px;
+        }
+    }
+}
+
+@media (max-width: 430px) {
+
+    .contact_container {
+        .title_contact {
+            margin-top: unset;
+
+            h2 {
+                font-size: 45px;
+            }
+
+            .vektor-container-contact {
+                top: 14%;
+                height: 53px;
+
+                img {
+                    width: 20px;
+                    height: 4px;
+                }
+            }
+        }
+
+        .text_contact {
+            h3 {
+                font-size: 23px;
+            }
+
+            .text {
+                font-size: 16px;
+                line-height: 19.2px;
+                text-align: unset;
+            }
+        }
+
+        .form_contact {
+            justify-content: center;
+            margin-top: -10%;
+
+            .btn_container {
+                .btn-contact {
+                    width: 195px;
+                    height: 49px;
+                    font-size: 17px;
+                }
+            }
+        }
+
+        .background-red-container {
+            top: 65vw;
+            overflow: hidden;
+
+            img {
+                width: 80vw;
+                height: 40vh;
+
+            }
+        }
+
+        .contact_content_container {
+            margin-bottom: -129%;
+        }
+    }
+
+    .top-btn {
+        left: 160px;
+        top: 478px;
+    }
+
+}
+
+@media (max-width: 390px) {
+
+    .contact_container {
+        .title_contact {
+            margin-top: unset;
+
+            h2 {
+                font-size: 45px;
+            }
+
+            .vektor-container-contact {
+                top: 11%;
+                height: 53px;
+
+                img {
+                    width: 20px;
+                    height: 4px;
+                }
+            }
+        }
+
+        .text_contact {
+            h3 {
+                font-size: 23px;
+            }
+
+            .text {
+                font-size: 16px;
+                line-height: 19.2px;
+                text-align: unset;
+            }
+        }
+
+        .form_contact {
+            justify-content: center;
+            margin-top: -10%;
+
+            .btn_container {
+                .btn-contact {
+                    width: 195px;
+                    height: 49px;
+                    font-size: 17px;
+                }
+            }
+        }
+
+        .background-red-container {
+            top: 72vw;
+            overflow: hidden;
+
+            img {
+                width: 80vw;
+                height: 40vh;
+
+            }
+        }
+
+        .contact_content_container {
+            margin-bottom: -129%;
+        }
+    }
+
+    .top-btn {
+        left: 132px;
+        top: 486px;
     }
 }
