--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,13 +8,15 @@ $orange: #FA7902;
     }
 
     .footer_container {
-        position: relative;
+        position: absolute;
         justify-content: center;
         display: flex;
-        height: 191px;
+        height: 196px;
         background-color: $bg-color;
         border-top: 4px solid $orange;
-        margin-top: 451px;
+        left: 0;
+        right: 0;
+        z-index: 99;
 
         .footer_content_container {
             display: flex;
@@ -116,21 +118,23 @@ $orange: #FA7902;
     }
 
     .footer_container {
-        position: relative;
+        position: absolute;
         justify-content: center;
         display: flex;
-        margin-top: 665px;
-        height: 380px;
+        // height: 196px;
         background-color: $bg-color;
         border-top: 4px solid $orange;
+        left: 0;
+        right: 0;
+        z-index: 99;
 
         .footer_content_container {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            margin-top: 70px;
-            margin-bottom: 70px;
+            margin-top: 5vw;
+            margin-bottom: 5vw;
             width: 100%;
 
             .name_container {
@@ -211,6 +215,84 @@ $orange: #FA7902;
                         transform: scaleX(1);
                         width: 100%;
                     }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 850px) {
+
+    .footer_container {
+        margin-bottom: 4vw;
+    }
+}
+
+@media (max-width: 430px) {
+    .footer_container {
+        margin-bottom: unset;
+        height: unset;
+        height: 269px;
+
+        .footer_content_container {
+            line-height: 36px;
+            height: unset;
+            display: flex;
+            justify-content: flex-end;
+
+            .name_container {
+                span {
+                    a {
+                        font-size: 12vw;
+                    }
+                }
+            }
+
+            .copyright_container {
+                p {
+                    font-size: 23px;
+                }
+            }
+
+            .imprint {
+                a {
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+
+}
+
+@media (max-width: 390px) {
+    .footer_container {
+        margin-bottom: unset;
+        height: unset;
+        height: 269px;
+
+        .footer_content_container {
+            line-height: 36px;
+            height: unset;
+            display: flex;
+            justify-content: flex-end;
+
+            .name_container {
+                span {
+                    a {
+                        font-size: 12vw;
+                    }
+                }
+            }
+
+            .copyright_container {
+                p {
+                    font-size: 23px;
+                }
+            }
+
+            .imprint {
+                a {
+                    font-size: 16px;
                 }
             }
         }
