--- a/src/app/iam/iam.component.scss
+++ b/src/app/iam/iam.component.scss
@@ -10,6 +10,11 @@ $red: #FF4747;
 
 .btn-lets-talk {
     margin-left: 30%;
+
+    a {
+        text-decoration: none;
+        color: white;
+    }
 }
 
 .vector-container {
@@ -134,6 +139,10 @@ $red: #FF4747;
         text-decoration: none;
         margin-left: 20px;
 
+        img{
+            outline: none;
+        }
+
         .mail-name {
 
             &:hover {
@@ -165,7 +174,7 @@ $red: #FF4747;
 .scroll-down-container {
     position: absolute;
     top: 0;
-    right: 7%;
+    right: 5.5%;
     z-index: 30;
     height: 84vh;
     display: flex;
@@ -287,15 +296,102 @@ $red: #FF4747;
 
 @media (max-width: 690px) {
 
-.social-media-container{
+    .social-media-container {
 
-    .mail-name{
-        display: none;
+        .mail-name {
+            display: none;
+        }
+    }
+
+}
+
+@media (max-width: 430px) {
+    .vector-shape-img {
+        top: 69%;
+    }
+
+    .portrait-container {
+
+        .portrait-img {
+            width: 64vw;
+            margin-top: 1%;
+        }
+    }
+
+    .iam-container {
+        display: flex;
+        width: 100%;
+        background-image: url(../../assets/img/i_am/photo_shadows_1.png);
+        background-position: -55px -83px;
+        background-size: 162% 153%;
+        left: 0;
+
+        .iam-text-container {
+            margin-top: 111%;
+
+            .iam-text {
+                margin-left: -13%;
+                margin-top: 5vw;
+            }
+
+            .name-text {
+                font-size: max(28px, 36px);
+            }
+
+            .FD-text {
+                font-size: max(18px, 6vw);
+            }
+
+            .btn-lets-talk {
+                margin-left: unset;
+                margin-left: 42px;
+            }
+        }
     }
 }
 
+@media (max-width: 390px) {
+
+    .vector-shape-img {
+        top: 69%;
+    }
+
+    .portrait-container {
+
+        .portrait-img {
+            width: 64vw;
+            margin-top: 1%;
+        }
+    }
+
+    .iam-container {
+        display: flex;
+        width: 100%;
+        background-image: url(../../assets/img/i_am/photo_shadows_1.png);
+        background-position: -55px -83px;
+        background-size: 162% 153%;
+        left: 0;
+
+        .iam-text-container {
+            margin-top: 111%;
+
+            .iam-text {
+                margin-left: -13%;
+                margin-top: 5vw;
+            }
+
+            .name-text {
+                font-size: max(28px, 36px);
+            }
+
+            .FD-text {
+                font-size: max(18px, 6vw);
+            }
+
+            .btn-lets-talk {
+                margin-left: unset;
+                margin-left: 42px;
+            }
+        }
+    }
 }
-
-
-
-
