--- a/src/app/myskills/my-skills.component.scss
+++ b/src/app/myskills/my-skills.component.scss
@@ -7,7 +7,7 @@ $red: #FF4747;
 
 .my-skills-container {
     position: relative;
-    top: 200px;
+    top: 120px;
     bottom: 20px;
     display: flex;
     justify-content: space-between;
@@ -52,7 +52,7 @@ $red: #FF4747;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-end;
-        margin-right: 20%;
+        margin-right: 10%;
         // border: 1px solid white;
 
         h2 {
@@ -66,8 +66,8 @@ $red: #FF4747;
         p {
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
-            font-size: max(12px, 0.9vw); // ca. 16px
-            line-height: 20px;
+            font-size: max(12px, 1.25vw); // ca. 16px
+            line-height: 23px;
             text-align: right;
             margin-top: 8%;
         }
@@ -82,6 +82,7 @@ $red: #FF4747;
             .another-btn {
                 margin-top: 30px;
                 margin-left: 0;
+                width: 200px;
             }
         }
 
@@ -93,7 +94,7 @@ $red: #FF4747;
 
             img {
                 height: 4px;
-                width: 15vw; //ca. 58px
+                width: 7vw; //ca. 58px
             }
         }
     }
@@ -129,11 +130,13 @@ $red: #FF4747;
             margin-top: 80px;
             position: relative;
             height: 100%;
-            width: 100%;
+            width: 80%;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-row-gap: 7vw;
-            padding-left: 10%;
+            margin-left: 10%;
+            margin-right: 10%;
+            gap: 18%;
+            margin-bottom: 18%;
 
             @media (max-width: 530px) {
                 grid-template-columns: repeat(3, 1fr);
@@ -158,7 +161,7 @@ $red: #FF4747;
         }
 
         .text-my-skills {
-            width: 95%;
+            width: 90%;
 
             .another-btn {
                 position: absolute;
@@ -168,15 +171,125 @@ $red: #FF4747;
             p {
                 font-size: max(12px, 1.9vw); // ca. 16px
                 margin-top: 0;
+                width: 90%;
             }
+        }
+
+        .vektor-container-my-skills,
+        .vektor-my-skills {
+            width: 8vw !important;
+            margin-top: -33px;
+            position: absolute;
+            top: 74px;
+        }
+    }
+}
+
+
+@media (max-width: 590px) {
+
+    .my-skills-container {
+
+        .text-my-skills p {
+            font-size: max(12px, 2.5vw);
+            line-height: 21px;
+        }
+
+        .skills-icons-container {
+            margin-top: 6px;
+        }
+    }
+}
+
+@media (max-width: 430px) {
+    .my-skills-container {
+        margin-top: 144px;
+
+        .text-my-skills {
+
+            h2 {
+                font-size: 45px;
+                margin-bottom: 35px;
+            }
+
+            p {
+                font-size: 16px;
+                line-height: 19px;
+            }
+
+            .button-center {
+
+                .another-btn {
+                    margin-top: 150px;
+                    margin-left: 36px;
+                    top: 84%;
+                }
+            }
+        }
+
+        .background-orange-my-skills {
+            left: -48px;
+            top: 86%;
+            width: 198px;
+            height: 630px;
+        }
+
+        .skills-icons-container {
+            margin-top: 16px;
+            gap: 6%;
+
+            img {
+                width: 17vw;
+            }
+
         }
     }
 
-    .vektor-container-my-skills,
-    .vektor-my-skills {
-        width: 4vw;
-        margin-top: -33px;
-        position: absolute;
-        top: 74px;
+}
+
+@media (max-width: 390px) {
+
+    .my-skills-container {
+        margin-top: 144px;
+
+        .text-my-skills {
+
+            h2 {
+                font-size: 45px;
+                margin-bottom: 35px;
+            }
+
+            p {
+                font-size: 16px;
+                line-height: 19px;
+            }
+
+            .button-center {
+
+                .another-btn {
+                    margin-top: 150px;
+                    margin-left: 36px;
+                    top: 84%;
+                }
+            }
+        }
+
+        .background-orange-my-skills {
+            left: -48px;
+            top: 86%;
+            width: 198px;
+            height: 630px;
+        }
+
+        .skills-icons-container {
+            margin-top: 16px;
+            gap: 6%;
+
+            img {
+                width: 17vw;
+            }
+
+        }
     }
+
 }
